spacing issues

--- a/styles/override.scss
+++ b/styles/override.scss
@@ -40,7 +40,9 @@ input::placeholder {
   transition: 1s cubic-bezier(.06,.73,.36,1) all;
   transition-delay: 0.1s;
 }
-
+.wb-break-all {
+  word-break: break-all;
+}
 .bg-pale-blue {
   background-color: #E3EAF2;
 }
@@ -58,10 +60,11 @@ input::placeholder {
   transform: translateX(0);
   opacity: 1;
   &.hidden {
-    transform: translateX(-50px);
+    transform: translateX(-32px);
     opacity: 0;
   }
 }
+
 .aspect-ratio--1x2 {
     padding-bottom: calc(200% + 4rem);
 }
@@ -69,6 +72,7 @@ input::placeholder {
 .aspect-ratio--2x1 {
     padding-bottom: calc(50% - 2rem);
 }
+
 @media screen and (min-width: 30em) {
   .aspect-ratio--2x1-ns {
       padding-bottom: calc(50% - 2rem);
